Added a ton of CS:GO cfg files from last install.
My own autoexec.cfg
bhop.cfg
- bhopauto.cfg
- bhopcrazy.cfg
- fun.cfg
- horde.cfg
- practice.cfg

--- a/norecoil.cfg
+++ b/norecoil.cfg
@@ -1,5 +1,5 @@
-echo Executing config...
+echo --- EXECUTING ---
 weapon_recoil_scale 0
 weapon_recoil_view_punch_extra 0
 weapon_accuracy_nospread 1
-echo Finished executing.
+echo --- FINISHED ---
