--- a/norecoil.cfg
+++ b/norecoil.cfg
@@ -1,4 +1,6 @@
 echo --- EXECUTING ---
+echo --- SV_CHEATS 1 ---
+sv_cheats 1
 weapon_recoil_scale 0
 weapon_recoil_view_punch_extra 0
 weapon_accuracy_nospread 1
