--- a/money.cfg
+++ b/money.cfg
@@ -1,4 +1,6 @@
 echo "--- SV_CHEATS 1 ---"
 sv_cheats 1
+mp_maxmoney 65535
+mp_startmoney 65535
+mp_afterroundmoney 65535
 mp_restartgame 1
-mp_startmoney 99999
